--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>notarya</title>
+    <title>NotArya</title>
      <link rel="icon" type="image/x-icon" href="favicon.png">
-    <meta name="description" content="welcome to my place on the internet." />
-    <meta name="author" content="notarya" />
+    <meta name="description" content="Welcome to my personal website!" />
+    <meta name="author" content="NotArya" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="notarya's portfolio" />
-    <meta property="og:description" content="welcome to my place on the internet." />
+    <meta property="og:title" content="@n0tarya1's portfolio" />
+    <meta property="og:description" content="Welcome to my personal website!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://c.tenor.com/XUD0K8qLJYsAAAAd/tenor.gif" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1324749242589249639/1458180486294671435/NA-5000-BANNER.png?ex=695eb3e7&is=695d6267&hm=b69a40a6008d5bba0371c84389e64a9f9b6637e5f22f709675c958d99b7ca235&=&format=webp&quality=lossless&width=550&height=183" />
 
    
   </head>
