--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="@n0tarya1's portfolio" />
-    <meta property="og:description" content="Welcome to my personal website!" />
+    <meta property="og:title" content="NotArya" />
+    <meta property="og:description" content="You should definitely check my website."/>
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://media.discordapp.net/attachments/1324749242589249639/1458180486294671435/NA-5000-BANNER.png?ex=695eb3e7&is=695d6267&hm=b69a40a6008d5bba0371c84389e64a9f9b6637e5f22f709675c958d99b7ca235&=&format=webp&quality=lossless&width=550&height=183" />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1324749242589249639/1458184707471573116/image.png?ex=695eb7d6&is=695d6656&hm=da896e076cb1fcf78ea2bf0f4d8ebddda42a9218ed534d865a182ecc432fc7af&=&format=webp&quality=lossless" />
 
    
   </head>
