--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NotArya</title>
      <link rel="icon" type="image/x-icon" href="favicon.png">
-    <meta name="description" content="Welcome to my personal website!" />
+    <meta name="description" content="You should definitely check my website." />
     <meta name="author" content="NotArya" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
